--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
+    "@types/styled-components": "^5.1.26",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "next": "13.4.7",
+    "normalize.css": "^8.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "styled-components": "6.0.0-rc.5",
     "typescript": "5.1.3"
   }
 }
